devops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slackbot-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: slackbot.ihandy.workfox.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slackbot
                port:
                  number: 8080
